test/cases/compile_errors/comptime_continue_inside_runtime_while_optional.zig
export fn entry() void {
    var p: ?usize = undefined;
    _ = &p;
    comptime var q = true;
    outer: inline while (q) {
        while (p) |_| continue :outer;
        q = false;
    }
}

// error
// backend=stage2
// target=native
//
// :6:23: error: comptime control flow inside runtime block
// :6:16: note: runtime control flow here
